--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -118,24 +118,24 @@
 
       <!-- Contact Form -->
 
-      <div class="container">
-      <div align="center">
-        <h3>Send me a message</h3>
+<!--       <div class="container">
+        <div align="center">
+          <h3>Send me a message</h3>
 
-        <%= simple_form_for @contact, :html => {:class => 'form-horizontal' } do |f| %>
-          <%= f.input :name, :required => true %>
-          <%= f.input :email, :required => true %>
-          <%= f.input :message, :as => :text, :required => true %>
-          <div class= "hidden">
-            <%= f.input :nickname, :hint => 'Leave this field blank!' %>
-          </div>
-          <div>
-            </br>
-            <%= f.button :submit, 'Send message', :class=> "btn btn-primary" %>
-          </div>
-        <% end %>
-      </div>
-    </div>
+          <%= simple_form_for @contact, :html => {:class => 'form-horizontal' } do |f| %>
+            <%= f.input :name, :required => true %>
+            <%= f.input :email, :required => true %>
+            <%= f.input :message, :as => :text, :required => true %>
+            <div class= "hidden">
+              <%= f.input :nickname, :hint => 'Leave this field blank!' %>
+            </div>
+            <div>
+              </br>
+              <%= f.button :submit, 'Send message', :class=> "btn btn-primary" %>
+            </div>
+          <% end %>
+        </div>
+      </div> -->
 
       <!-- Footer Section -->
       <div class="footer">
