Added CV to nav links

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -4,6 +4,7 @@
   <div class="nav-links">
     <a class="nav-link" href="#bio">About</a>
     <a class="nav-link" href="#portfolio">Portfolio</a>
+    <%= link_to "Resume", "/ryanmansfield-cv.pdf", target: "blank", class: "nav-link" %>
   </div>
   <div class="container">
     <h1>Ryan Mansfield</h1>
