Fixed night roulette link

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -49,8 +49,8 @@
   <h6 id="portfolio">Past projects</h6>
   <div class="cards">
     <div class="card">
-      <a href="www.night-roulette.com" target="_blank">
-        <%= image_tag("night-roulette.png", :alt => "night roulette") %>
+      <a href="https://www.night-roulette.com" target="_blank">
+        <%= image_tag("night-roulette.png", :alt => "night-roulette") %>
       </a>
       <div class="card-infos">
         <div>
