--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -85,7 +85,7 @@
     </div>
 
     <div class="card">
-      <a href="#">
+      <a href="https://ryanmansfield.github.io/react-gifs/">
         <%= image_tag("giphy-react.png", :alt => "giphy-react") %>
       </a>
       <div class="card-infos">
