Added React Flats to portfolio

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -108,6 +108,18 @@
       </div>
     </div>
 
+    <div class="card">
+      <a href="https://ryanmansfield.github.io/react-flats/#">
+        <%= image_tag("react-flats.png", :alt => "react-flats") %>
+      </a>
+      <div class="card-infos">
+        <div>
+          <h2>Apartment Selector</h2>
+          <p>React APP for selecting an apartment and displaying its location on the Map</p>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
 
