Redux Chat APP added to portfolio section

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -120,6 +120,18 @@
       </div>
     </div>
 
+    <div class="card">
+      <a href="https://ryanmansfield.github.io/chat-redux/">
+        <%= image_tag("redux-chat.png", :alt => "redux-chat") %>
+      </a>
+      <div class="card-infos">
+        <div>
+          <h2>Multi Channel Messaging APP</h2>
+          <p>React/REDUX Messaging APP</p>
+        </div>
+      </div>
+    </div>
+
   </div>
 </div>
 
