updated portfolio card content

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -66,8 +66,8 @@
       </a>
       <div class="card-infos">
         <div>
-          <h2>Fauxtography</h2>
-          <p>Rails Application built using JavaScript, HTML, CSS</p>
+          <h2>Fauxtography Marketplace</h2>
+          <p>Rails APP built using JavaScript, HTML, CSS</p>
         </div>
       </div>
     </div>
@@ -78,8 +78,8 @@
       </a>
       <div class="card-infos">
         <div>
-          <h2>Mister Cocktail</h2>
-          <p>Rails Application built using JavaScript, HTML, CSS</p>
+          <h2>Cocktail Recipe APP</h2>
+          <p>Rails APP using CRUD and 3rd party APIs to update Cocktail Recipe</p>
         </div>
       </div>
     </div>
@@ -91,7 +91,7 @@
       <div class="card-infos">
         <div>
           <h2>Giphy Search</h2>
-          <p>React Application</p>
+          <p>React APP integrating GIPHY API to search and display results</p>
         </div>
       </div>
     </div>
@@ -103,7 +103,7 @@
       <div class="card-infos">
         <div>
           <h2>Tsunami</h2>
-          <p>Website built using Rails</p>
+          <p>Responsive website using jQuery and Bootstrap</p>
         </div>
       </div>
     </div>
@@ -127,7 +127,7 @@
       <div class="card-infos">
         <div>
           <h2>Multi Channel Messaging APP</h2>
-          <p>React/REDUX Messaging APP</p>
+          <p>React/Redux Messaging APP with 3rd party API integration</p>
         </div>
       </div>
     </div>
