Updated project cards content

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -55,7 +55,7 @@
       <div class="card-infos">
         <div>
           <h2>Night Roulette</h2>
-          <p>Rails Application built using JavaScript, HTML, CSS</p>
+          <p>Rails App designed and developed in a team and pushed to production using JavaScript, HTML, CSS</p>
         </div>
       </div>
     </div>
@@ -67,7 +67,7 @@
       <div class="card-infos">
         <div>
           <h2>Fauxtography Marketplace</h2>
-          <p>Rails APP built using JavaScript, HTML, CSS</p>
+          <p>Rails APP built in a team during 1 week sprint using JavaScript, HTML, CSS</p>
         </div>
       </div>
     </div>
@@ -78,7 +78,7 @@
       </a>
       <div class="card-infos">
         <div>
-          <h2>Cocktail Recipe APP</h2>
+          <h2>Cocktail Recipe Book</h2>
           <p>Rails APP using CRUD and 3rd party APIs to update Cocktail Recipe</p>
         </div>
       </div>
@@ -103,7 +103,7 @@
       <div class="card-infos">
         <div>
           <h2>Tsunami</h2>
-          <p>Responsive website using jQuery and Bootstrap</p>
+          <p>Responsive website design using jQuery and Bootstrap</p>
         </div>
       </div>
     </div>
@@ -115,7 +115,7 @@
       <div class="card-infos">
         <div>
           <h2>Apartment Selector</h2>
-          <p>React APP for selecting an apartment and displaying its location on the Map</p>
+          <p>React APP for selecting an apartment and displaying its location on the map</p>
         </div>
       </div>
     </div>
