--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -85,7 +85,7 @@
     </div>
 
     <div class="card">
-      <a href="https://ryanmansfield.github.io/react-gifs/">
+      <a href="https://ryanmansfield.github.io/react-gifs/" target="blank">
         <%= image_tag("giphy-react.png", :alt => "giphy-react") %>
       </a>
       <div class="card-infos">
@@ -97,7 +97,7 @@
     </div>
 
     <div class="card">
-      <a href="https://tsunami-music.herokuapp.com/">
+      <a href="https://tsunami-music.herokuapp.com/" target="blank">
         <%= image_tag("tsunami.png", :alt => "tsunami") %>
       </a>
       <div class="card-infos">
@@ -109,7 +109,7 @@
     </div>
 
     <div class="card">
-      <a href="https://ryanmansfield.github.io/react-flats/#">
+      <a href="https://ryanmansfield.github.io/react-flats/" target="blank">
         <%= image_tag("react-flats.png", :alt => "react-flats") %>
       </a>
       <div class="card-infos">
@@ -121,7 +121,7 @@
     </div>
 
     <div class="card">
-      <a href="https://ryanmansfield.github.io/chat-redux/">
+      <a href="https://ryanmansfield.github.io/chat-redux/" target="blank">
         <%= image_tag("redux-chat.png", :alt => "redux-chat") %>
       </a>
       <div class="card-infos">
