Updated chat app card

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -121,13 +121,13 @@
     </div>
 
     <div class="card">
-      <a href="https://ryanmansfield.github.io/chat-redux/" target="blank">
+      <a href=" https://chat-rails-redux.herokuapp.com" target="blank">
         <%= image_tag("redux-chat.png", :alt => "redux-chat") %>
       </a>
       <div class="card-infos">
         <div>
           <h2>Multi Channel Messaging APP</h2>
-          <p>React/Redux Messaging APP with 3rd party API integration</p>
+          <p>Rails with React/Redux Messaging APP</p>
         </div>
       </div>
     </div>
