modal template added to night roulette

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -57,6 +57,9 @@
           <h2>Night Roulette</h2>
           <p>Rails App designed and developed in a team and pushed to production using JavaScript, HTML, CSS</p>
         </div>
+         <button type="button" class="create-btn" data-toggle="modal"  data-target="#project-create-modal">
+            <i class="fas fa-plus-circle"></i>
+          </button>
       </div>
     </div>
 
@@ -132,6 +135,16 @@
       </div>
     </div>
 
+  </div>
+</div>
+
+<!-- MODALS -->
+<div class="modal fade" id="project-create-modal" tabindex="-1" role="dialog" aria-labelledby="project-create-modal" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+        <h1>test</h1>
+
+    </div>
   </div>
 </div>
 
