--- a/app/views/pages/_nightRouletteModal.html.erb
+++ b/app/views/pages/_nightRouletteModal.html.erb
@@ -2,6 +2,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
         <h1>test</h1>
+        <p>test</p>
 
     </div>
   </div>
