--- a/app/views/pages/_chatCard.html.erb
+++ b/app/views/pages/_chatCard.html.erb
@@ -1,14 +1,13 @@
-    <div class="card">
-      <a href=" https://chat-rails-redux.herokuapp.com" target="blank">
-        <%= image_tag("redux-chat.png", :alt => "redux-chat") %>
-      </a>
-      <div class="card-infos">
-        <div>
-          <h2>Multi Channel Messaging APP</h2>
-              <button type="button" class="create-btn" data-toggle="modal"  data-target="#chat-modal">
-                <i class="fas fa-plus-circle"></i>
-              </button>
-          <p>Rails with React/Redux Messaging APP</p>
-        </div>
-      </div>
+<div class="card">
+   <%= image_tag("redux-chat.png", :alt => "redux-chat") %>
+  <div class="card-info">
+    <h2>Multi Channel Messaging App</h2>
+    <p>Rails with React/Redux Messaging APP</p>
+    <div class="card-action">
+     <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#chat-modal">
+        View More
+      </button>
+      <a href=" https://chat-rails-redux.herokuapp.com" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
     </div>
+  </div>
+</div>
