--- a/app/views/pages/_nightRouletteCard.html.erb
+++ b/app/views/pages/_nightRouletteCard.html.erb
@@ -1,14 +1,13 @@
 <div class="card">
-  <a href="https://www.night-roulette.com" target="_blank">
-    <%= image_tag("night-roulette.png", :alt => "night-roulette") %>
-  </a>
-  <div class="card-infos">
-    <div>
-      <h2>Night Roulette</h2>
-         <button type="button" class="create-btn" data-toggle="modal"  data-target="#night-roulette-modal">
-            <i class="fas fa-plus-circle"></i>
-          </button>
-      <p>Rails App designed and developed in a team and pushed to production using JavaScript, HTML, CSS</p>
+  <%= image_tag("night-roulette.png", :alt => "night-roulette") %>
+  <div class="card-info">
+    <h2>Night Roulette</h2>
+    <p>Rails App designed and developed in a team and pushed to production using JavaScript, HTML, CSS</p>
+    <div class="card-action">
+     <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#night-roulette-modal">
+        View More
+      </button>
+      <a href="https://www.night-roulette.com" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
     </div>
   </div>
 </div>
