--- a/app/views/pages/_apartmentCard.html.erb
+++ b/app/views/pages/_apartmentCard.html.erb
@@ -1,14 +1,13 @@
-    <div class="card">
-      <a href="https://ryanmansfield.github.io/react-flats/" target="blank">
-        <%= image_tag("react-flats.png", :alt => "react-flats") %>
-      </a>
-      <div class="card-infos">
-        <div>
-          <h2>Apartment Selector</h2>
-              <button type="button" class="create-btn" data-toggle="modal"  data-target="#apartment-modal">
-                <i class="fas fa-plus-circle"></i>
-              </button>
-          <p>React APP for selecting an apartment and displaying its location on the map</p>
-        </div>
-      </div>
+<div class="card">
+  <%= image_tag("react-flats.png", :alt => "react-flats") %>
+  <div class="card-info">
+    <h2>Apartment Selector</h2>
+    <p>React APP for selecting an apartment and displaying its location on the map</p>
+    <div class="card-action">
+     <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#apartment-modal">
+        View More
+      </button>
+      <a href="https://ryanmansfield.github.io/react-flats/" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
     </div>
+  </div>
+</div>
