--- a/app/views/pages/_fauxtographyCard.html.erb
+++ b/app/views/pages/_fauxtographyCard.html.erb
@@ -1,14 +1,13 @@
-    <div class="card">
-      <a href="http://fauxtography.herokuapp.com" target="_blank">
-        <%= image_tag("fauxtography.png", :alt => "fauxtography") %>
-      </a>
-      <div class="card-infos">
-        <div>
-          <h2>Fauxtography Marketplace</h2>
-              <button type="button" class="create-btn" data-toggle="modal"  data-target="#fauxtography-modal">
-                <i class="fas fa-plus-circle"></i>
-              </button>
-          <p>Rails APP built in a team during 1 week sprint using JavaScript, HTML, CSS</p>
-        </div>
-      </div>
+<div class="card">
+   <%= image_tag("fauxtography.png", :alt => "fauxtography") %>
+  <div class="card-info">
+    <h2>Fauxtography Marketplace</h2>
+    <p>Rails APP built in a team during 1 week sprint using JavaScript, HTML, CSS</p>
+    <div class="card-action">
+     <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#fauxtography-modal">
+        View More
+      </button>
+      <a href="http://fauxtography.herokuapp.com" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
     </div>
+  </div>
+</div>
