--- a/app/views/pages/_giphyCard.html.erb
+++ b/app/views/pages/_giphyCard.html.erb
@@ -1,15 +1,13 @@
-
-    <div class="card">
-      <a href="https://ryanmansfield.github.io/react-gifs/" target="blank">
-        <%= image_tag("giphy-react.png", :alt => "giphy-react") %>
-      </a>
-      <div class="card-infos">
-        <div>
-          <h2>Giphy Search</h2>
-              <button type="button" class="create-btn" data-toggle="modal"  data-target="#giphy-modal">
-                <i class="fas fa-plus-circle"></i>
-              </button>
-          <p>React APP integrating GIPHY API to search and display results</p>
-        </div>
-      </div>
+<div class="card">
+   <%= image_tag("giphy-react.png", :alt => "giphy-react") %>
+  <div class="card-info">
+    <h2>Giphy Search</h2>
+    <p>React APP integrating GIPHY API to search and display results</p>
+    <div class="card-action">
+     <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#giphy-modal">
+        View More
+      </button>
+      <a href="https://ryanmansfield.github.io/react-gifs/" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
     </div>
+  </div>
+</div>
