--- a/app/views/pages/_tsunamiCard.html.erb
+++ b/app/views/pages/_tsunamiCard.html.erb
@@ -1,14 +1,13 @@
-    <div class="card">
-      <a href="https://tsunami-music.herokuapp.com/" target="blank">
-        <%= image_tag("tsunami.png", :alt => "tsunami") %>
-      </a>
-      <div class="card-infos">
-        <div>
-          <h2>Tsunami</h2>
-              <button type="button" class="create-btn" data-toggle="modal"  data-target="#tsunami-modal">
-                <i class="fas fa-plus-circle"></i>
-              </button>
-          <p>Responsive website design using jQuery and Bootstrap</p>
-        </div>
-      </div>
+<div class="card">
+   <%= image_tag("tsunami.png", :alt => "tsunami") %>
+  <div class="card-info">
+    <h2>Tsunami</h2>
+    <p>Responsive website design using jQuery and Bootstrap</p>
+    <div class="card-action">
+     <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#tsunami-modal">
+        View More
+      </button>
+      <a href="https://tsunami-music.herokuapp.com/" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
     </div>
+  </div>
+</div>
