changed card content

--- a/app/views/pages/_apartmentCard.html.erb
+++ b/app/views/pages/_apartmentCard.html.erb
@@ -2,7 +2,7 @@
   <%= image_tag("react-flats.png", :alt => "react-flats") %>
   <div class="card-info">
     <h2>Apartment Selector</h2>
-    <p>React APP for selecting an apartment and displaying its location on the map</p>
+    <p><i>Web app built with React allowing users to select an apartment and displaying the apartments location on the map.</i></p>
     <div class="card-action">
      <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#apartment-modal">
         View More
