--- a/app/views/pages/_cocktailCard.html.erb
+++ b/app/views/pages/_cocktailCard.html.erb
@@ -2,7 +2,7 @@
    <%= image_tag("mr-cocktail.png", :alt => "mr-cocktail") %>
   <div class="card-info">
     <h2>Cocktail Recipe Book</h2>
-    <p>Rails APP using CRUD and 3rd party APIs to update Cocktail Recipe</p>
+    <p><i>Web app built with Rails.  This app allows a user to create a cocktail, and add ingredients to it.</i></p>
     <div class="card-action">
      <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#cocktail-modal">
         View More
