--- a/app/views/pages/_giphyCard.html.erb
+++ b/app/views/pages/_giphyCard.html.erb
@@ -2,7 +2,7 @@
    <%= image_tag("giphy-react.png", :alt => "giphy-react") %>
   <div class="card-info">
     <h2>Giphy Search</h2>
-    <p>React APP integrating GIPHY API to search and display results</p>
+    <p><i>Web app built with React allowing users to search for giphys, select a giphy from the searh results and display the selected giphy.</i></p>
     <div class="card-action">
      <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#giphy-modal">
         View More
