--- a/app/views/pages/_nightRouletteModal.html.erb
+++ b/app/views/pages/_nightRouletteModal.html.erb
@@ -1,8 +1,8 @@
 <div class="modal fade" id="night-roulette-modal" tabindex="-1" role="dialog" aria-labelledby="night-roulette-modal" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-        <h1>test</h1>
-        <p>test</p>
+      <p>Rails App designed and developed in a team and pushed to production using JavaScript, HTML, CSS</p>
+      <a href="https://github.com/ryanmansfield/night_roulette" target="_blank" class="btn btn-flat" class="btn btn-flat">View Code</a>
 
     </div>
   </div>
