--- a/app/views/pages/_tsunamiCard.html.erb
+++ b/app/views/pages/_tsunamiCard.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<!-- <div class="card">
    <%= image_tag("tsunami.png", :alt => "tsunami") %>
   <div class="card-info">
     <h2>Tsunami</h2>
@@ -10,4 +10,4 @@
       <a href="https://tsunami-music.herokuapp.com/" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
     </div>
   </div>
-</div>
+</div> -->
