--- a/app/views/pages/_chatCard.html.erb
+++ b/app/views/pages/_chatCard.html.erb
@@ -2,7 +2,7 @@
    <%= image_tag("redux-chat.png", :alt => "redux-chat") %>
   <div class="card-info">
     <h2>Multi Channel Messaging App</h2>
-    <p>Rails with React/Redux Messaging APP</p>
+    <p><i>Web app built with Rails & React allowing users to select a channel and join that channels' messages.</i></p>
     <div class="card-action">
      <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#chat-modal">
         View More
