--- a/app/views/pages/_fauxtographyCard.html.erb
+++ b/app/views/pages/_fauxtographyCard.html.erb
@@ -2,7 +2,7 @@
    <%= image_tag("fauxtography.png", :alt => "fauxtography") %>
   <div class="card-info">
     <h2>Fauxtography Marketplace</h2>
-    <p>Rails APP built in a team during 1 week sprint using JavaScript, HTML, CSS</p>
+    <p><i>Web app built with Rails.  The app brings photographers and clients together by letting clients view photographers profiles and book photo sessions with them.</i></p>
     <div class="card-action">
      <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#fauxtography-modal">
         View More
