--- a/app/views/pages/_nightRouletteCard.html.erb
+++ b/app/views/pages/_nightRouletteCard.html.erb
@@ -2,7 +2,7 @@
   <%= image_tag("night-roulette.png", :alt => "night-roulette") %>
   <div class="card-info">
     <h2>Night Roulette</h2>
-    <p>Rails App designed and developed in a team and pushed to production using JavaScript, HTML, CSS</p>
+    <p><i>Prototype mobile web app for travellers built with Rails.  The app removes the pain of having to find a restaurant, bar, or night club and get there, by selecting only the best location based on your preferences, arranging a ride to the location, and the ability to share it with friends.</i></p>
     <div class="card-action">
      <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#night-roulette-modal">
         View More
