--- a/app/views/pages/_tsunamiModal.html.erb
+++ b/app/views/pages/_tsunamiModal.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" id="tsunami-modal" tabindex="-1" role="dialog" aria-labelledby="tsunami-modal" aria-hidden="true">
+<!-- <div class="modal fade" id="tsunami-modal" tabindex="-1" role="dialog" aria-labelledby="tsunami-modal" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
         <h1>test</h1>
@@ -6,3 +6,4 @@
     </div>
   </div>
 </div>
+ -->
