AOS added to card

--- a/app/views/pages/_nightRouletteCard.html.erb
+++ b/app/views/pages/_nightRouletteCard.html.erb
@@ -1,13 +1,18 @@
-<div class="card">
-  <%= image_tag("night-roulette.png", :alt => "night-roulette") %>
-  <div class="card-info">
-    <h2>Night Roulette</h2>
-    <p><i>Prototype mobile web app for travellers built with Rails.  The app removes the pain of having to find a restaurant, bar, or night club and get there, by selecting only the best location based on your preferences, arranging a ride to the location, and the ability to share it with friends.</i></p>
-    <div class="card-action">
-     <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#night-roulette-modal">
-        View More
-      </button>
-      <a href="https://www.night-roulette.com" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
+<div data-aos="zoom-in-up"
+     data-aos-duration="2000">
+  <div class="card">
+    <%= image_tag("night-roulette.png", :alt => "night-roulette") %>
+    <div class="card-info">
+      <h2>Night Roulette</h2>
+      <p><i>Prototype mobile web app for travellers built with Rails.  The app removes the pain of having to find a restaurant, bar, or night club and get there, by selecting only the best location based on your preferences, arranging a ride to the location, and the ability to share it with friends.</i></p>
+      <div class="card-action">
+       <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#night-roulette-modal">
+          View More
+        </button>
+        <a href="https://www.night-roulette.com" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
+      </div>
     </div>
   </div>
 </div>
+
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
