--- a/app/views/pages/_chatCard.html.erb
+++ b/app/views/pages/_chatCard.html.erb
@@ -1,13 +1,16 @@
-<div class="card">
-   <%= image_tag("redux-chat.png", :alt => "redux-chat") %>
-  <div class="card-info">
-    <h2>Multi Channel Messaging App</h2>
-    <p><i>Web app built with Rails & React allowing users to select a channel and join that channels' messages.</i></p>
-    <div class="card-action">
-     <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#chat-modal">
-        View More
-      </button>
-      <a href=" https://chat-rails-redux.herokuapp.com" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
+<div data-aos="zoom-in-right"
+     data-aos-duration="2000">
+  <div class="card">
+     <%= image_tag("redux-chat.png", :alt => "redux-chat") %>
+    <div class="card-info">
+      <h2>Multi Channel Messaging App</h2>
+      <p><i>Web app built with Rails & React allowing users to select a channel and join that channels' messages.</i></p>
+      <div class="card-action">
+       <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#chat-modal">
+          View More
+        </button>
+        <a href=" https://chat-rails-redux.herokuapp.com" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
+      </div>
     </div>
   </div>
 </div>
