--- a/app/views/pages/_giphyCard.html.erb
+++ b/app/views/pages/_giphyCard.html.erb
@@ -1,13 +1,16 @@
-<div class="card">
-   <%= image_tag("giphy-react.png", :alt => "giphy-react") %>
-  <div class="card-info">
-    <h2>Giphy Search</h2>
-    <p><i>Web app built with React allowing users to search for giphys, select a giphy from the searh results and display the selected giphy.</i></p>
-    <div class="card-action">
-     <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#giphy-modal">
-        View More
-      </button>
-      <a href="https://ryanmansfield.github.io/react-gifs/" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
+<div data-aos="zoom-in-up"
+     data-aos-duration="2000">
+  <div class="card">
+     <%= image_tag("giphy-react.png", :alt => "giphy-react") %>
+    <div class="card-info">
+      <h2>Giphy Search</h2>
+      <p><i>Web app built with React allowing users to search for giphys, select a giphy from the searh results and display the selected giphy.</i></p>
+      <div class="card-action">
+       <button type="button" class="btn btn-flat" data-toggle="modal"  data-target="#giphy-modal">
+          View More
+        </button>
+        <a href="https://ryanmansfield.github.io/react-gifs/" target="_blank" class="btn btn-flat" class="btn btn-flat">Visit Website </a>
+      </div>
     </div>
   </div>
 </div>
