changed banner height

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,8 @@ h4 {
 /*Bio Section*/
 .bio {
   padding: 24px;
+  width: 75%;
+  margin: auto;
 }
 
 .bio p {
@@ -38,11 +40,11 @@ h4 {
 /*Portfolio*/
 
 .portfolio {
-  padding: 24px;
+  // padding: 24px;
 }
 
 #portfolio {
-  margin-top: 24px;
+  // margin-top: 24px;
   margin-bottom: 0px;
   text-align: center;
 }
